a patch supposed to unbreak abi from christos@ PR/45598